Fix alignment and update documentation

--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
+
 html, body{
     margin: 0;
     padding: 0;
     background-color: #181a1b;
     color: white;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+    line-height: 1.3em;
 }
 
 html {
@@ -44,13 +47,20 @@ html {
     width: 12px;
 }
 
+.container {
+    text-align: center;
+}
+
 article {
     display: inline-block;
-    width: 92vw;
-    margin: 2vw;
-    padding: 2vw;
-    border-radius: 2vw;
+    box-sizing: border-box;
+    width: 1000px;
+    max-width: 90vw;
+    margin: 30px 0;
+    padding: calc(2vw + 10px);
+    border-radius: calc(2vw + 10px);
     background-color: #6A283480;
+    text-align: initial;
 }
 
 /* "Airport" for floating elements to land at */
@@ -101,7 +111,7 @@ article .airport {
 
 .container ul li::before {
     content: "-";
-    margin: 0 1ch;
+    margin: 0 1ch 0 0;
     position: relative;
     top: -2px;
 }
